# besreceiver

./: .air.toml  .dockerignore  .gitignore  .golangci.yml  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  buf.gen.yaml  buf.yaml  builder-config.yaml  cliff.toml  collector-config.yaml  go.mod  go.sum
.github/workflows/: ci.yml  release.yml
cmd/besdiff/: main.go
cmd/besrecord/: main.go
docs/: architecture.md  attributes.md  filter.md  sequence.md
docs/adr/: 0001-deterministic-span-ids.md  0002-large-payload-handling.md
examples/: README.md
examples/bazel-project/: .bazelrc  BUILD  BUILD.bazel  MODULE.bazel  README.md  go.mod
examples/bazel-project/images/: BUILD.bazel
examples/bazel-project/libs/hash/: BUILD.bazel  hash.cc  hash.h  hash_test.cc
examples/bazel-project/libs/tasklib/: BUILD.bazel  task.go  task_test.go
examples/bazel-project/proto/: BUILD.bazel  task.proto
examples/bazel-project/services/engine/: BUILD.bazel  engine.cc  engine_test.cc
examples/bazel-project/services/gateway/: BUILD.bazel  gateway.go  gateway_test.go
examples/bazel-project/services/processor/: BUILD.bazel  TaskProcessor.java  TaskProcessorTest.java
examples/bazel-project/services/reporter/: BUILD.bazel  reporter.py  reporter_test.py
examples/bazel-project/tests/: BUILD.bazel  sharded_test.sh
examples/custom-collector/: Dockerfile  README.md  builder-config.yaml  collector-config.yaml  docker-compose.yaml
examples/datadog/: .env.example  Dockerfile.dev  README.md  collector-config.yaml  datadog.yaml  docker-compose.yaml
examples/datadog/conf.d/: otelcol.yaml
examples/grafana-cloud/: README.md  collector-config.yaml  docker-compose.yaml
examples/jaeger/: README.md  collector-config.yaml  docker-compose.yaml
examples/otlp-generic/: README.md  collector-config.yaml  docker-compose.yaml
examples/tempo/: README.md  collector-config.yaml  docker-compose.yaml  tempo.yaml
examples/tempo/grafana/provisioning/datasources/: tempo.yaml
images/otelcol-bazel/: .dockerignore  Dockerfile  README.md  builder-config.yaml  collector-config.yaml
internal/bep/actioncache/: action_cache.pb.go
internal/bep/analysiscache/: analysis_cache_service_metadata_status.pb.go
internal/bep/buildeventstream/: build_event_stream.pb.go
internal/bep/commandline/: command_line.pb.go
internal/bep/failuredetails/: failure_details.pb.go
internal/bep/invocationpolicy/: invocation_policy.pb.go
internal/bep/options/: option_filters.pb.go
internal/bep/packagemetrics/: package_load_metrics.pb.go
internal/bep/strategypolicy/: strategy_policy.pb.go
internal/besio/: besio.go  besio_test.go
packaging/: install.sh  uninstall.sh
packaging/launchd/: com.github.chagui.besreceiver.plist
packaging/systemd/: besreceiver.service
receiver/besreceiver/: actiondata_test.go  attrs.go  attrs_test.go  benchmark_test.go  bepparser.go  bepparser_test.go  config.go  config_test.go  doc.go  e2e_assertions_test.go  e2e_helpers_test.go  e2e_test.go  factory.go  factory_test.go  filter.go  filter_test.go  filter_tracebuilder_test.go  generated_component_test.go  generated_package_test.go  highcard_test.go  invocation.go  invocation_test.go  metadata.yaml  metricsbuilder.go  metricsbuilder_test.go  patterns_test.go  receiver.go  receiver_test.go  remote_cache_test.go  testhelpers_test.go  tracebuilder.go  tracebuilder_test.go
receiver/besreceiver/internal/metadata/: generated_status.go
receiver/besreceiver/testdata/besstream/: build_and_test.besstream
scripts/: precommit-golangci-lint.sh
