module(name = "taskforge")

# --- Language rules ---
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_java", version = "9.6.1")
bazel_dep(name = "rules_python", version = "1.9.0")

# --- Protobuf ---
bazel_dep(name = "protobuf", version = "34.1")

# --- Packaging & containers ---
bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "rules_oci", version = "2.3.0")

# --- Go SDK ---
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.23.4")

# --- Python toolchain ---
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.12")

# --- OCI base images (distroless) ---
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_cc",
    digest = "sha256:847433844c7e04bcf07a3a0f0f5a8de554c6df6fa9e3e3ab14d3f6b73d780235",
    image = "gcr.io/distroless/cc-debian12",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
)
oci.pull(
    name = "distroless_java",
    image = "gcr.io/distroless/java21-debian12",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
    tag = "latest",
)
oci.pull(
    name = "distroless_python",
    image = "gcr.io/distroless/python3-debian12",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
    tag = "latest",
)
use_repo(
    oci,
    "distroless_cc",
    "distroless_cc_linux_amd64",
    "distroless_cc_linux_arm64_v8",
    "distroless_java",
    "distroless_java_linux_amd64",
    "distroless_java_linux_arm64_v8",
    "distroless_python",
    "distroless_python_linux_amd64",
    "distroless_python_linux_arm64_v8",
)
