load("@rules_shell//shell:sh_test.bzl", "sh_test")

sh_test(
    name = "pass_test",
    size = "small",
    srcs = ["pass_test.sh"],
)

sh_test(
    name = "sharded_test",
    size = "small",
    srcs = ["sharded_test.sh"],
    shard_count = 2,
)

sh_test(
    name = "fail_test",
    size = "small",
    srcs = ["fail_test.sh"],
    tags = ["manual"],
)
